# entropylens

./: .gitignore  LICENSE  README.md  batch_run.py  pyproject.toml  requirements.txt  run.bat
api/: app.py  schemas.py
cli/: main.py
data/: prompts.json
data/config/: settings.yaml
display/: terminal.py
inference/: loader.py  runner.py
metrics/: entropy.py  latency.py  quality.py
services/: comparator.py  state.py
strategies/: registry.py
tests/: test_comparator.py  test_entropy.py  test_strategies.py
tracking/: report.py  writer.py
utils/: loader.py
