# pyproject.toml

[project]
name = "EntropyLens"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "rich>=13.7",
    "nltk>=3.8",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "httpx"]

[project.scripts]
dsc = "cli.main:app"
